# waveshare-epaper

./: .env.example  Cargo.toml  README.md  justfile
examples/: demo.rs  fetch.rs
server/: .env.example  Cargo.toml  waveshare-epaper-server.service
server/src/: backend.rs  main.rs  render.rs
src/: il0398.rs  lib.rs  ssd1683.rs
