[package]
edition = "2024"
name = "waveshare-epaper-server"
version = "0.1.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
dotenvy = "0.15"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
md-5 = "0.10"
hex = "0.4"
rand = "0.9"
